--- a/FindYourWay/www/index.html
+++ b/FindYourWay/www/index.html
@@ -37,6 +37,7 @@
         <title>Hello World</title>
     </head>
     <body>
+        <h2 style="color:aqua; text-align: center; margin-top: 20px; margin-left: auto; margin-right: auto; width: 50%;">Application made by LethalDarkLight</h2>
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
