Test du module vibration avec bouton fonctionnel

--- a/FindYourWay/www/index.html
+++ b/FindYourWay/www/index.html
@@ -37,7 +37,14 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h2 style="color:aqua; text-align: center; margin-top: 20px; margin-left: auto; margin-right: auto; width: 50%;">Application made by LethalDarkLight</h2>
+        
+        <div style="color:beige; text-align: center; margin-top: 20px; margin-left: auto; margin-right: auto; width: 50%;">
+            <h2 id="test">Application made by LethalDarkLight</h2>
+            <p>
+                <button style="background-color: white; color: black;" id = "vibration">VIBRATION</button>
+            </p>
+        </div>
+
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
